<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtOpen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/report_page"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/imageview_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOpen" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/report_message"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOpen" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/describe"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="@+id/txtDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/editDescription"
        app:layout_constraintStart_toEndOf="@+id/editDescription" />

    <CheckBox
        android:id="@+id/checkLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

</android.support.constraint.ConstraintLayout>