<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/openTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buy"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/imageview_round"
        app:layout_constraintBottom_toBottomOf="@+id/openTxt"
        app:layout_constraintStart_toStartOf="@+id/openTxt"
        app:layout_constraintTop_toTopOf="@+id/openTxt" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openTxt" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAmount"
        app:layout_constraintTop_toBottomOf="@+id/openTxt" />

    <TextView
        android:id="@+id/txtTokens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Tokens"
        app:layout_constraintStart_toStartOf="@+id/txtAmount"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <EditText
        android:id="@+id/editTokens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editAmount"
        app:layout_constraintStart_toStartOf="@+id/editAmount"
        app:layout_constraintTop_toBottomOf="@+id/editAmount" />

    <TextView
        android:id="@+id/txtStanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Standing"
        app:layout_constraintStart_toStartOf="@+id/txtTokens"
        app:layout_constraintTop_toBottomOf="@+id/txtTokens" />

    <TextView
        android:id="@+id/txtShowStanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="NIL"
        app:layout_constraintBottom_toBottomOf="@+id/txtStanding"
        app:layout_constraintStart_toEndOf="@+id/txtStanding" />

    <TextView
        android:id="@+id/txtSuggested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Suggested"
        app:layout_constraintStart_toStartOf="@+id/txtStanding"
        app:layout_constraintTop_toBottomOf="@+id/txtStanding" />

    <TextView
        android:id="@+id/txtShowSuggested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="No Data Available"
        app:layout_constraintBottom_toBottomOf="@+id/txtSuggested"
        app:layout_constraintStart_toEndOf="@+id/txtSuggested" />

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/Purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShowSuggested" />

    <TextView
        android:id="@+id/txtHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/Histroy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>