<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/coLogo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/imageview_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_round"
        android:text="@string/company"
        app:layout_constraintStart_toEndOf="@+id/coLogo"
        app:layout_constraintTop_toTopOf="@+id/coLogo" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_round"
        android:text="@string/me"
        app:layout_constraintStart_toEndOf="@+id/coId"
        app:layout_constraintTop_toTopOf="@+id/coId" />

    <TextView
        android:id="@+id/txtMsgDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_round"
        android:hint="Message Description"
        app:layout_constraintBottom_toBottomOf="@+id/coLogo"
        app:layout_constraintStart_toStartOf="@+id/coId" />

    <TextView
        android:id="@+id/txtNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_round"
        android:backgroundTint="#ffff0000"
        android:text="@string/nw"
        app:layout_constraintBottom_toBottomOf="@+id/txtMsgDesc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtNoReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_round"
        android:backgroundTint="#ff0000ff"
        android:text="@string/no_rep"
        app:layout_constraintBottom_toBottomOf="@+id/coId"
        app:layout_constraintStart_toEndOf="@+id/userId" />

</android.support.constraint.ConstraintLayout>