<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/imageview_round"
        app:layout_constraintBottom_toBottomOf="@+id/appNameTxt"
        app:layout_constraintStart_toStartOf="@+id/appNameTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kplc_logo2" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTxt" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/signUpTxt"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <TextView
        android:id="@+id/mtrNoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/acc_no"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editMtrNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/acc_no"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/mtrNoTxt"
        app:layout_constraintTop_toBottomOf="@+id/mtrNoTxt" />

    <TextView
        android:id="@+id/phoneNoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/editMtrNo"
        app:layout_constraintTop_toBottomOf="@+id/editMtrNo" />

    <EditText
        android:id="@+id/editPhoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editMtrNo"
        app:layout_constraintStart_toStartOf="@+id/phoneNoTxt"
        app:layout_constraintTop_toBottomOf="@+id/phoneNoTxt" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_email"
        app:layout_constraintStart_toStartOf="@+id/editPhoneNo"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNo" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editPhoneNo"
        app:layout_constraintStart_toStartOf="@+id/emailTxt"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <TextView
        android:id="@+id/passwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_pass"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/passwTxt"
        app:layout_constraintTop_toBottomOf="@+id/passwTxt" />

    <TextView
        android:id="@+id/confirmPasswTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pass_confirm"
        app:layout_constraintStart_toStartOf="@+id/editPassw"
        app:layout_constraintTop_toBottomOf="@+id/editPassw" />

    <EditText
        android:id="@+id/editConfirmPassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_round"
        android:ems="10"
        android:hint="@string/pass_confirm"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editPassw"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswTxt"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswTxt" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/register_promp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>