<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imgBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/log_in"
        android:textColor="#ffffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:paddingStart="5dp"
        android:text="@string/user_email"
        android:textColor="#ffffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="286dp"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/passwText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="5dp"
        android:text="@string/user_pass"
        android:textColor="#ffffffff"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/passwText"
        app:layout_constraintTop_toBottomOf="@+id/passwText" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_round"
        android:text="@string/log_in"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassw" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/imageview_round"
        app:layout_constraintBottom_toTopOf="@+id/openText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/openText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="@+id/imgBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpPromptTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/register_promp"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toTopOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logInAnim"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/imageview_round"
        android:backgroundTint="#ffff0000"
        app:layout_constraintBottom_toTopOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logInButton" />

    <TextView
        android:id="@+id/txtEmailNtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/empty_mail"
        android:textColor="#ffff0000"
        app:layout_constraintStart_toEndOf="@+id/passwText"
        app:layout_constraintTop_toTopOf="@+id/emailText" />

    <TextView
        android:id="@+id/txtPassNtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_pass"
        android:textColor="#ffff0000"
        app:layout_constraintStart_toStartOf="@+id/txtEmailNtEmpty"
        app:layout_constraintTop_toTopOf="@+id/passwText" />

    <ImageView
        android:id="@+id/imgShowPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editPassw"
        app:layout_constraintEnd_toEndOf="@+id/editPassw"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <TextView
        android:id="@+id/txtFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/log_in_fail"
        android:textColor="#ffff0000"
        app:layout_constraintBottom_toTopOf="@+id/signUpPromptTxt"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>